2005-08-07  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.cpp (run): Added optional "batchmode"
	parameter.

2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 14 frozen (2.4.0 release)

2004-12-21  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-chainsetup.h (Mix_mode_t): Added.
	* eca-chainsetup.h (set_mix_mode, mix_mode): Added.	

2004-12-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-format.h (format_string): Function signature changed;
	no longer throws an exception.
	* sample-specs.h: SAMPLE_SPECS::is_system_littleendian removed as
	obsolete.
	* eca-chainsetup.cpp (is_valid_for_connection): Function signature 
	changed, added an argument.

2004-12-11  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-logger-interface.cpp (set_backlog_length): Added. 
	* eca-logger-interface.cpp (backlog): Added. 
	* eca-logger.h (level_to_string): Added.
	* eca-engine-driver.h (exec): Signature changed.
        * library interface version to 14:0:0

2004-12-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* sample-ops_impl.h: Added, not part of the public interface.

2004-10-27  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 13 frozen

2004-10-23  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-control-base.h (set_float_to_string_precision): Added to protected API.
	* eca-control-base.h (float_to_string_precision): Added to public API.
	* eca-control-base.h (set_float_to_string_precision_rep): Added to protected API.

2004-07-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* audioio-aac.h: Added.

2004-07-09  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* eca-audio-format.h (Sample_endianess, set_sample_endianess, sample_endianess): Added.
	* eca-audio-format.h (Sample_coding, set_sample_coding, sample_coding): Added.
	* audioio-forked-stream.h (fork_command): Added.
	* audioio-flac.h: Added.
        * library interface version to 13:0:4

2004-05-05  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
